problem with position

--- a/chatUI/app/src/main/res/layout/item_chat_right.xml
+++ b/chatUI/app/src/main/res/layout/item_chat_right.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:background="@drawable/right"
+        android:background="#a5a5d6"
         android:orientation="vertical"
         android:paddingBottom="10dp">
 
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:maxWidth="100dp"
             android:padding="5dp"
-            android:textColor="@android:color/holo_green_dark" />
+            android:textColor="#000000" />
 
     </LinearLayout>
 
