--- a/chatUI/app/src/main/res/layout/checkbox.xml
+++ b/chatUI/app/src/main/res/layout/checkbox.xml
@@ -6,9 +6,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:background="@drawable/right"
+        android:background="#a5a5d6"
         android:paddingBottom="10dp"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#ff0127"
+            android:text="Dr Messenger"/>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -16,7 +21,8 @@
     android:orientation="horizontal">
     <CheckBox
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/option1"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,7 +39,8 @@
         android:orientation="horizontal">
         <CheckBox
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:id="@+id/option2"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -50,7 +57,8 @@
         android:orientation="horizontal">
         <CheckBox
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:id="@+id/option3"/>
 
         <TextView
             android:layout_width="wrap_content"
