--- a/chatUI/app/src/main/res/layout/activity_main.xml
+++ b/chatUI/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.android.chatui.MainActivity">
+    <include
+        layout="@layout/checkbox"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkthe_box"
+        android:layout_width="match_parent"/>
+<include
+    layout="@layout/detail_of_prob"
+    android:layout_margin="10dp"
+    android:id="@+id/detail"
+    android:layout_height="wrap_content"
 
+    android:layout_width="match_parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
