--- a/chatUI/app/src/main/res/layout/detail_of_prob.xml
+++ b/chatUI/app/src/main/res/layout/detail_of_prob.xml
@@ -2,6 +2,8 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:visibility="invisible"
+    android:id="@+id/onclickvisible"
     >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
