--- a/Project/app/src/main/res/layout/activity_main.xml
+++ b/Project/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:layout_alignParentBottom="true"
         android:text="@string/sign_up"
         android:layout_margin="2dp"
-        android:id="@+id/sign_Up"
+        android:id="@+id/sign_Up_in_mainactivity"
         />
 
     <TextView
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:text="@string/new_user"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/sign_Up"
+        android:layout_above="@+id/sign_Up_in_mainactivity"
         android:layout_margin="2dp"
         android:textColor="@color/green"
         />
