--- a/Project/app/src/main/res/layout/activity_signup.xml
+++ b/Project/app/src/main/res/layout/activity_signup.xml
@@ -4,12 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:id="@+id/progress"
+            android:visibility="invisible"/>
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".views.SignUpActivity">
+
 
     <ImageView
         android:layout_width="match_parent"
@@ -61,5 +71,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/compulsory" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/return_home"
+        android:id="@+id/return_home"/>
 </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
