--- a/Project/app/src/main/res/layout/activity_main.xml
+++ b/Project/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/log_in"
+        android:id="@+id/getIn"
         android:layout_margin="2dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/password"/>
